@@ -459,7 +459,7 @@ WARN_LOGFILE           = doxygen-warnings.txt
 # directories like "/usr/src/myproject". Separate the files or directories 
 # with spaces.
 
-INPUT                  = @top_srcdir@/gtksourceview/gtksourceviewmm
+INPUT                  = @top_srcdir@/gtksourceview/gtksourceviewmm  @top_srcdir@/docs/reference/reference-index.txt
 
 # If the value of the INPUT tag contains directories, you can use the 
 # FILE_PATTERNS tag to specify one or more wildcard pattern (like *.cpp 
