@@ -9,6 +9,7 @@ htmlfiles=$(shell ls -1 html/*.html)
 pngfiles=$(shell ls -1 html/*.png)
 giffiles=$(shell ls -1 html/*.gif)
 cssfiles=$(shell ls -1 html/*.css)
+websitefiles=reference-index.txt
 
 docdir = $(datadir)/doc/libgtksourceviewmm-1.0/docs
 htmldocumentationdir=$(docdir)/reference/html
@@ -19,5 +20,7 @@ all: html/index.html
 clean-local:
 	rm -rf html
 
-EXTRA_DIST=$(doxyfile) $(htmlfiles) $(pngfiles) $(giffiles) $(cssfiles)
+EXTRA_DIST=$(doxyfile) $(htmlfiles) \
+$(pngfiles) $(giffiles) $(cssfiles) \
+$(websitefiles)
 
