@@ -1,3 +1,11 @@
+Sat, 20 Jan 2007 18:37:25 +0100 Dodji Seketeli
+
+	* gtksourceview/src/sourcebuffer.hg, docs/reference/reference-index.txt:
+	  remove the main page doc from sourcebuffer.hg and put it in
+	  doc/reference/reference-index.txt
+	* docs/reference/Doxyfile.in, docs/reference/Makefile.am:
+	  change this accordingly.
+
 Sun, 14 Jan 2007 11:28:25 +0100 Dodji Seketeli
 
 	*  gtksourceview/src/sourceview.hg: updated API docs.
